--- a/Cookbook/Cookbook.Client/Pages/RecipeDetails.razor.css
+++ b/Cookbook/Cookbook.Client/Pages/RecipeDetails.razor.css
@@ -14,5 +14,6 @@
     border-radius: 24px;
     background-color: #E4EDEE;
     color: #2B2C2E;
-    width: 140px;
+    width: 45%;
+    min-width: fit-content;
 }
